--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
         <div class="titles">
             <h1 class="gametitle">Pump the Train<br></h1>
             <h2 class="studio">Trailed Games</h2>
-            <a href = "Pump the Train.apk" download=""><button class="install">Install</button></a>
-        </div>       
+            <a href = "Pump the Train.apk" download="" class="href"><button class="install">Install</button></a>
+        </div>    
+        <p>Classic game, where you have to pick up the fuel, to move your train! Overcome other obstacles, that tries to stop your succesfull trip!</p>   
+        <div class="images">
+            <img src="scr1.jpg" class="scr1">
+            <img src="scr2.jpg" class="scr2">
+        </div>
     </div>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@500&display=swap');
@@ -21,11 +26,13 @@
             background-color: black;
             margin: 0px;
             background-image: url("bgptt.jpg");
+            background-size: 100%;
+            background-;
         }
         .footer 
         {
             width: 100%;
-            height: 50em;
+            height: 44em;
             margin-top: 10em;
             background-color: rgba(255, 255, 255, 0.781);
             border-radius: 2em 2em 0em 0em;
@@ -54,22 +61,22 @@
             height:1rem;
             margin: 0px;
             color: rgba(0, 0, 0, 0.479);
+            margin-left: 2em;
         }
         .install {
-            width: 100%;
+            width: 5em;
             height: 1.4em;
             margin-top: 0.8em;
+            margin-left: 4.4em;
             border-radius: 1em;
             border: none;
             font-family: 'Montserrat', sans-serif;
-            font-size: 1.4em;
-            padding-left: 0em;
+            font-size: 1.2em;
             color: white;
-            background-color: rgb(71, 68, 255);
-            padding-left: 2.5em;
-            padding-right: 2.5em;
+            background-color: rgb(91, 22, 252);
             overflow: none;
             transition: background-color 0.5s, color 0.5s;
+            box-shadow: 0px 9px 15px 4px rgba(0, 0, 0, 0.164);
         }
         .install:active{
             background-color: rgb(255, 211, 15);
@@ -79,7 +86,32 @@
             margin-top: 0.5em;
             margin-left: 1em;
         }
-
+        p {
+            position: absolute;
+            margin-left: 2em;
+            margin-right: 2em;
+            top:9em;
+            font-family: 'Montserrat', sans-serif;
+            color: rgba(0, 0, 0, 0.479);
+        }
+        .scr1 {
+            width: 9.5em;
+            position: absolute;
+            border-radius: 1.5em 0.5em 0.5em 1.5em;
+            box-shadow: 0px 9px 15px 4px rgba(0, 0, 0, 0.164);
+        }
+        .scr2 {
+            width: 9.5em;
+            position: absolute; 
+            margin-left: 10em;
+            border-radius: 0.5em 1.5em 1.5em 0.5em;
+            box-shadow: 0px 9px 15px 4px rgba(0, 0, 0, 0.164);
+        }
+        .images {
+            position: absolute;
+            top:17em;
+            margin-left: 2em;
+        }
     </style>
 </body>
 </html>
