--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h1 class="gametitle">Pump the Train<br></h1>
             <h2 class="studio">Trailed Games</h2>
             <a href = "Pump the Train.apk" download="" class="href"><button class="install">Install</button></a>
-        </div>    
-        <p>Classic game, where you have to pick up the fuel, to move your train! Overcome other obstacles, that tries to stop your succesfull trip!</p>   
+        </div>   
+            <p>Classic game, where you have to pick up the fuel, to move your train! Overcome other obstacles, that tries to stop your succesfull trip!</p>         
         <div class="images">
             <img src="scr1.jpg" class="scr1">
             <img src="scr2.jpg" class="scr2">
@@ -27,17 +27,15 @@
             margin: 0px;
             background-image: url("bgptt.jpg");
             background-size: 100%;
-            background-;
         }
         .footer 
         {
             width: 100%;
             height: 44em;
             margin-top: 10em;
-            background-color: rgba(255, 255, 255, 0.781);
+            background-color: rgba(255, 255, 255, 0.596);
             border-radius: 2em 2em 0em 0em;
             backdrop-filter: blur(1em);
-            display: inline-flex;
         }
         .gamelogo {
             width: 6em;
@@ -54,6 +52,7 @@
             margin-bottom: 0.4em;
             font-size: 1.4rem;
             height: 1em;
+            width: 9em;
         }
         .studio {
             font-family: 'Montserrat', sans-serif;
@@ -62,11 +61,12 @@
             margin: 0px;
             color: rgba(0, 0, 0, 0.479);
             margin-left: 2em;
+            margin-top: 0.4em;
         }
         .install {
             width: 5em;
             height: 1.4em;
-            margin-top: 0.8em;
+            margin-top: 1.2em;
             margin-left: 4.4em;
             border-radius: 1em;
             border: none;
@@ -83,34 +83,37 @@
             color:black
         }
         .titles {
-            margin-top: 0.5em;
-            margin-left: 1em;
+            height:8em;
+            width: 12em;
+            position: relative;
+            left:11em;  
+            top:-8em;
         }
         p {
-            position: absolute;
-            margin-left: 2em;
-            margin-right: 2em;
-            top:9em;
             font-family: 'Montserrat', sans-serif;
             color: rgba(0, 0, 0, 0.479);
+            width: 19em;
+            margin-left: 2em;
+            position: relative;
+            top:-9em;
         }
         .scr1 {
             width: 9.5em;
             position: absolute;
-            border-radius: 1.5em 0.5em 0.5em 1.5em;
+            border-radius: 1.5em;
             box-shadow: 0px 9px 15px 4px rgba(0, 0, 0, 0.164);
         }
         .scr2 {
             width: 9.5em;
             position: absolute; 
-            margin-left: 10em;
-            border-radius: 0.5em 1.5em 1.5em 0.5em;
+            margin-left: 11em;
+            border-radius: 1.5em;
             box-shadow: 0px 9px 15px 4px rgba(0, 0, 0, 0.164);
         }
         .images {
-            position: absolute;
-            top:17em;
+            position:relative;
             margin-left: 2em;
+            top: -8em;
         }
     </style>
 </body>
