--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
             width: 100%;
             height: 44em;
             margin-top: 10em;
-            background-color: rgba(255, 255, 255, 0.596);
+            background-color: rgb(255, 255, 255);
             border-radius: 2em 2em 0em 0em;
-            backdrop-filter: blur(1em);
         }
         .gamelogo {
             width: 6em;
