--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             margin-left: 2em;
             border-radius: 1.5em;
             margin-right: 1em;
-            box-shadow: 0px 9px 15px 4px rgba(0, 0, 0, 0.164);
+            box-shadow: 0px 6px 22px -4px rgba(0, 0, 0, 0.37);
         }
         .gametitle {
             font-family: 'Montserrat', sans-serif;
@@ -75,7 +75,7 @@
             background-color: rgb(91, 22, 252);
             overflow: none;
             transition: background-color 0.5s, color 0.5s;
-            box-shadow: 0px 9px 15px 4px rgba(0, 0, 0, 0.164);
+            box-shadow: 0px 6px 22px -4px rgba(0,0,0,0.37);
         }
         .install:active{
             background-color: rgb(255, 211, 15);
