--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
             width: 100%;
             height: 40em;
             margin-top: 10em;
-            background-color: rgb(255, 255, 255);
+            background-color: rgba(255, 255, 255, 0.603);
             border-radius: 2em 2em 0em 0em;
+            backdrop-filter: blur(1em);
+            -webkit-backdrop-filter:blur(2em);
         }
         .gamelogo {
             width: 6em;
